--- a/weather-app/Base.lproj/Main.storyboard
+++ b/weather-app/Base.lproj/Main.storyboard
@@ -24,6 +24,9 @@
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="ftc-ra-6TE" secondAttribute="height" multiplier="1:1" id="iNr-Qp-Zyh"/>
                                         </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="24°C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgy-FO-ICK">
                                         <rect key="frame" x="0.0" y="216.00000000000006" width="200" height="35.666666666666657"/>
